# unicode_norm

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.ko.md  README.md  main.c  test.sh  unicode_norm.c
linux/: install_script.sh
linux/nautilus/scripts/: Convert-to-NFC  Convert-to-NFD
macos/Convert to NFC (Windows, Linux).workflow/Contents/: Info.plist  document.wflow
macos/Convert to NFD (Mac).workflow/Contents/: Info.plist  document.wflow
windows/: app.manifest
windows/installer/: Installer.wixproj  License.rtf  Package.wxs
